--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "comp": "node tools/create/component.js",
-    "reboot": "heroku builds:cancel -a forautoweb && heroku restart -a forautoweb"
+    "reboot": "heroku builds:cancel -a forautoweb && heroku restart -a forautoweb",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@feathersjs/authentication-client": "^4.5.8",
@@ -47,17 +49,29 @@
     "socket.io-client": "^2.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.1.11",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-root-import": "^6.5.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "chromatic": "^5.5.0",
+    "css-loader": "^5.0.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "file-loader": "^6.2.0",
     "line-reader": "^0.4.0",
     "prettier": "^2.1.2",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.7.2",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-prettier": "^8.0.2",
