--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-infinite-scroll-component": "^5.1.0",
     "react-multi-carousel": "2.6.1",
     "react-redux": "^7.2.1",
+    "react-swipeable": "^6.0.1",
     "react-toastify": "^6.0.8",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
