--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@feathersjs/feathers": "^4.5.8",
     "@feathersjs/rest-client": "^4.5.8",
     "@feathersjs/socketio-client": "^4.5.8",
-    "@lottiefiles/react-lottie-player": "^2.2.2",
     "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
     "body-scroll-lock": "^3.1.5",
     "i18next": "^19.8.1",
     "lodash": "^4.17.20",
+    "lottie-react": "^2.1.0",
     "moment": "^2.29.1",
     "next": "10.0.3",
     "next-compose-plugins": "^2.2.0",
