--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@feathersjs/rest-client": "^4.5.8",
     "@feathersjs/socketio-client": "^4.5.8",
     "@material-ui/core": "^4.11.0",
-    "axios": "^0.20.0",
+    "axios": "0.21.1",
     "body-scroll-lock": "^3.1.5",
     "i18next": "^19.8.1",
     "lodash": "^4.17.20",
     "lottie-react": "^2.1.0",
     "moment": "^2.29.1",
-    "next": "10.0.3",
+    "next": "^10.0.3",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^1.4.0",
     "next-svgr": "^0.0.2",
@@ -37,7 +37,7 @@
     "react-i18next": "^11.7.3",
     "react-icons": "^3.11.0",
     "react-infinite-scroll-component": "^5.1.0",
-    "react-multi-carousel": "2.6.1",
+    "react-multi-carousel": "2.5.5",
     "react-redux": "^7.2.1",
     "react-swipeable": "^6.0.1",
     "react-toastify": "^6.0.8",
