--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@feathersjs/rest-client": "^4.5.8",
     "@feathersjs/socketio-client": "^4.5.8",
     "@material-ui/core": "^4.11.0",
+    "@types/next": "^9.0.0",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "0.21.1",
     "body-scroll-lock": "^3.1.5",
     "i18next": "^19.8.1",
@@ -57,6 +59,8 @@
     "@storybook/addon-links": "^6.1.11",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.11",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.0",
@@ -78,6 +82,7 @@
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-prettier": "^1.1.2"
+    "stylelint-prettier": "^1.1.2",
+    "typescript": "^4.1.3"
   }
 }
