--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
-  "presets": ["next/babel", "@zeit/next-typescript/babel"],
-  "plugins": ["babel-plugin-root-import"]
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "babel-plugin-root-import",
+      {
+        "rootPathPrefix": "~",
+        "rootPathSuffix": "./"
+      }
+    ]
+  ]
 }
