--- a/package.json
+++ b/package.json
@@ -22,34 +22,33 @@
     "@feathersjs/socketio-client": "^4.5.8",
     "@material-ui/core": "^4.11.0",
     "@types/next": "^9.0.0",
-    "@zeit/next-typescript": "^1.1.1",
     "axios": "0.21.1",
     "body-scroll-lock": "^3.1.5",
     "i18next": "^19.8.1",
-    "lodash": "^4.17.20",
+    "lodash": "4.17.20",
     "lottie-react": "^2.1.0",
     "moment": "^2.29.1",
-    "next": "^10.0.3",
-    "next-compose-plugins": "^2.2.0",
+    "next": "10.0.5",
+    "next-compose-plugins": "2.2.1",
     "next-fonts": "^1.4.0",
     "next-svgr": "^0.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-google-button": "^0.7.1",
     "react-i18next": "^11.7.3",
     "react-icons": "^3.11.0",
     "react-infinite-scroll-component": "^5.1.0",
     "react-multi-carousel": "2.5.5",
-    "react-redux": "^7.2.1",
-    "react-swipeable": "^6.0.1",
+    "react-redux": "7.2.2",
+    "react-swipeable": "6.0.1",
     "react-toastify": "^6.0.8",
     "react-transition-group": "^4.4.1",
-    "redux": "^4.0.5",
+    "redux": "4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-form": "^8.3.6",
-    "redux-saga": "^1.1.3",
+    "redux-form": "8.3.7",
+    "redux-saga": "1.1.3",
     "reduxsauce": "^1.2.0",
-    "sass": "^1.26.11",
+    "sass": "1.32.5",
     "socket.io-client": "^2.3.1"
   },
   "devDependencies": {
@@ -59,17 +58,20 @@
     "@storybook/addon-links": "^6.1.11",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.11",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/react-redux": "^7.1.15",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "babel-plugin-import": "^1.13.0",
-    "babel-plugin-root-import": "^6.5.0",
+    "babel-plugin-import": "1.13.3",
+    "babel-plugin-root-import": "^6.6.0",
     "babel-plugin-styled-components": "^1.11.1",
     "chromatic": "^5.5.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
