--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-redux": "^7.1.15",
+    "@types/redux-form": "^8.3.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "1.13.3",
