--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-infinite-scroll-component": "^5.1.0",
     "react-multi-carousel": "2.5.5",
     "react-redux": "7.2.2",
+    "react-responsive-carousel": "^3.2.12",
     "react-swipeable": "6.0.1",
     "react-toastify": "^6.0.8",
     "react-transition-group": "^4.4.1",
