--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux": "4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "8.3.7",
+    "redux-persist": "^6.0.0",
     "redux-saga": "1.1.3",
     "reduxsauce": "^1.2.0",
     "sass": "1.32.5",
