--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-dom": "17.0.1",
     "react-google-button": "^0.7.1",
     "react-i18next": "^11.7.3",
-    "react-icons": "^3.11.0",
+    "react-icons": "4.2.0",
     "react-infinite-scroll-component": "^5.1.0",
     "react-multi-carousel": "2.5.5",
     "react-redux": "7.2.2",
