--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-compose-plugins": "2.2.1",
     "next-fonts": "^1.4.0",
     "next-svgr": "^0.0.2",
+    "rc-upload": "^4.2.0-alpha.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-google-button": "^0.7.1",
