--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "4.2.0",
     "react-infinite-scroll-component": "^5.1.0",
     "react-multi-carousel": "2.5.5",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.12",
     "react-swipeable": "6.0.1",
@@ -66,6 +67,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/react-places-autocomplete": "^7.2.6",
     "@types/react-redux": "^7.1.15",
     "@types/redux-form": "^8.3.1",
     "babel-eslint": "^10.1.0",
