--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-i18next": "^11.7.3",
     "react-icons": "4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-multi-carousel": "2.5.5",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "7.2.2",
