add socials, fix heroku

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "rebuild": "node importBuilder",
     "build": "next build",
     "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build",
     "open": "concurrently \"http-server -a localhost -p 3000\" \"open http://localhost:3000\"",
     "component": "node tools/create/component.js",
     "reboot": "heroku builds:cancel -a forautoweb && heroku restart -a forautoweb",
@@ -36,7 +37,6 @@
     "rc-upload": "^4.2.0-alpha.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-google-button": "^0.7.1",
     "react-i18next": "^11.7.3",
     "react-icons": "4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
