--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   "scripts": {
     "dev": "next",
     "rebuild": "node importBuilder",
-    "build": "next build",
+    "build": "next build && next start -p $PORT",
     "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build",
     "open": "concurrently \"http-server -a localhost -p 3000\" \"open http://localhost:3000\"",
     "component": "node tools/create/component.js",
     "reboot": "heroku builds:cancel -a forautoweb && heroku restart -a forautoweb",
