--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next",
     "rebuild": "node importBuilder",
-    "build": "next build && next start -p $PORT",
+    "build": "next build",
     "start": "next start -p $PORT",
     "open": "concurrently \"http-server -a localhost -p 3000\" \"open http://localhost:3000\"",
     "component": "node tools/create/component.js",
