--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next",
     "rebuild": "node importBuilder",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "node server.js",
     "open": "concurrently \"http-server -a localhost -p 3000\" \"open http://localhost:3000\"",
     "component": "node tools/create/component.js",
     "reboot": "heroku builds:cancel -a forautoweb && heroku restart -a forautoweb",
@@ -25,6 +25,8 @@
     "@types/next": "^9.0.0",
     "axios": "0.21.1",
     "body-scroll-lock": "^3.1.5",
+    "express": "^4.17.1",
+    "heroku-ssl-redirect": "^0.1.1",
     "i18next": "^19.8.1",
     "lodash": "4.17.20",
     "lottie-react": "^2.1.0",
