--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.2.0",
