--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@feathersjs/rest-client": "^4.5.8",
     "@feathersjs/socketio-client": "^4.5.8",
     "@material-ui/core": "^4.11.0",
-    "@types/next": "^9.0.0",
     "axios": "0.21.1",
     "body-scroll-lock": "^3.1.5",
     "express": "^4.17.1",
@@ -31,14 +30,14 @@
     "lodash": "4.17.20",
     "lottie-react": "^2.1.0",
     "moment": "^2.29.1",
-    "next": "10.2.0",
+    "next": "11.0.1",
     "next-compose-plugins": "2.2.1",
-    "next-fonts": "^1.4.0",
+    "next-fonts": "1.5.1",
     "next-svgr": "^0.0.2",
     "rc-upload": "^4.2.0-alpha.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-i18next": "^11.7.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-i18next": "11.11.4",
     "react-icons": "4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-lazy-load-image-component": "^1.5.1",
@@ -97,6 +96,6 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.3.5"
   }
 }
