--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "css-loader": "^5.0.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.4.0",
